src/main/java/de/bfs/idfparser/parser/idf/IdfParser.java
// Generated from de/bfs/idfparser/parser/idf/Idf.g4 by ANTLR 4.9.2
package de.bfs.idfparser.parser.idf;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IdfParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BLOCK_PREFIX=1, DATA=2, SITE=3, TEXT=4, ATTN=5, TEST=6, COMMENT_PREFIX=7, 
		WS=8, NEWLINE=9, STRING_ESC=10, STRING=11, C=12, ENDOFIDF=13;
	public static final int
		RULE_idfdatei = 0, RULE_idf_header = 1, RULE_measure_block = 2, RULE_location_block = 3, 
		RULE_text_block = 4, RULE_data_line = 5, RULE_site_line = 6, RULE_comment = 7, 
		RULE_measure_line = 8, RULE_location_line = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"idfdatei", "idf_header", "measure_block", "location_block", "text_block", 
			"data_line", "site_line", "comment", "measure_line", "location_line"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'DATA'", "'SITE'", "'TEXT'", "'ATTN'", "'TEST'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BLOCK_PREFIX", "DATA", "SITE", "TEXT", "ATTN", "TEST", "COMMENT_PREFIX", 
			"WS", "NEWLINE", "STRING_ESC", "STRING", "C", "ENDOFIDF"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Idf.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IdfParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class IdfdateiContext extends ParserRuleContext {
		public Idf_headerContext idf_header() {
			return getRuleContext(Idf_headerContext.class,0);
		}
		public TerminalNode ENDOFIDF() { return getToken(IdfParser.ENDOFIDF, 0); }
		public List<Measure_blockContext> measure_block() {
			return getRuleContexts(Measure_blockContext.class);
		}
		public Measure_blockContext measure_block(int i) {
			return getRuleContext(Measure_blockContext.class,i);
		}
		public List<Location_blockContext> location_block() {
			return getRuleContexts(Location_blockContext.class);
		}
		public Location_blockContext location_block(int i) {
			return getRuleContext(Location_blockContext.class,i);
		}
		public List<Text_blockContext> text_block() {
			return getRuleContexts(Text_blockContext.class);
		}
		public Text_blockContext text_block(int i) {
			return getRuleContext(Text_blockContext.class,i);
		}
		public IdfdateiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idfdatei; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).enterIdfdatei(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).exitIdfdatei(this);
		}
	}

	public final IdfdateiContext idfdatei() throws RecognitionException {
		IdfdateiContext _localctx = new IdfdateiContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_idfdatei);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			idf_header();
			setState(24); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(24);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(21);
					measure_block();
					}
					break;
				case 2:
					{
					setState(22);
					location_block();
					}
					break;
				case 3:
					{
					setState(23);
					text_block();
					}
					break;
				}
				}
				setState(26); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BLOCK_PREFIX) | (1L << DATA) | (1L << SITE) | (1L << TEXT))) != 0) );
			setState(28);
			match(ENDOFIDF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idf_headerContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(IdfParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(IdfParser.STRING, i);
		}
		public TerminalNode NEWLINE() { return getToken(IdfParser.NEWLINE, 0); }
		public Idf_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idf_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).enterIdf_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).exitIdf_header(this);
		}
	}

	public final Idf_headerContext idf_header() throws RecognitionException {
		Idf_headerContext _localctx = new Idf_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_idf_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(STRING);
			setState(31);
			match(STRING);
			setState(32);
			match(STRING);
			setState(33);
			match(STRING);
			setState(34);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Measure_blockContext extends ParserRuleContext {
		public Data_lineContext data_line() {
			return getRuleContext(Data_lineContext.class,0);
		}
		public List<Measure_lineContext> measure_line() {
			return getRuleContexts(Measure_lineContext.class);
		}
		public Measure_lineContext measure_line(int i) {
			return getRuleContext(Measure_lineContext.class,i);
		}
		public Measure_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_measure_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).enterMeasure_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).exitMeasure_block(this);
		}
	}

	public final Measure_blockContext measure_block() throws RecognitionException {
		Measure_blockContext _localctx = new Measure_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_measure_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(36);
			data_line();
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(37);
				measure_line();
				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STRING );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Location_blockContext extends ParserRuleContext {
		public Site_lineContext site_line() {
			return getRuleContext(Site_lineContext.class,0);
		}
		public List<Location_lineContext> location_line() {
			return getRuleContexts(Location_lineContext.class);
		}
		public Location_lineContext location_line(int i) {
			return getRuleContext(Location_lineContext.class,i);
		}
		public Location_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_location_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).enterLocation_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).exitLocation_block(this);
		}
	}

	public final Location_blockContext location_block() throws RecognitionException {
		Location_blockContext _localctx = new Location_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_location_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(42);
			site_line();
			setState(44); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(43);
				location_line();
				}
				}
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STRING );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Text_blockContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(IdfParser.TEXT, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(IdfParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(IdfParser.NEWLINE, i);
		}
		public List<TerminalNode> STRING() { return getTokens(IdfParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(IdfParser.STRING, i);
		}
		public Text_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).enterText_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).exitText_block(this);
		}
	}

	public final Text_blockContext text_block() throws RecognitionException {
		Text_blockContext _localctx = new Text_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_text_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(TEXT);
			setState(49);
			match(NEWLINE);
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE || _la==STRING) {
				{
				{
				setState(50);
				_la = _input.LA(1);
				if ( !(_la==NEWLINE || _la==STRING) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_lineContext extends ParserRuleContext {
		public TerminalNode DATA() { return getToken(IdfParser.DATA, 0); }
		public TerminalNode NEWLINE() { return getToken(IdfParser.NEWLINE, 0); }
		public TerminalNode BLOCK_PREFIX() { return getToken(IdfParser.BLOCK_PREFIX, 0); }
		public Data_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).enterData_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).exitData_line(this);
		}
	}

	public final Data_lineContext data_line() throws RecognitionException {
		Data_lineContext _localctx = new Data_lineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_data_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BLOCK_PREFIX) {
				{
				setState(56);
				match(BLOCK_PREFIX);
				}
			}

			setState(59);
			match(DATA);
			setState(60);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Site_lineContext extends ParserRuleContext {
		public TerminalNode SITE() { return getToken(IdfParser.SITE, 0); }
		public TerminalNode NEWLINE() { return getToken(IdfParser.NEWLINE, 0); }
		public TerminalNode BLOCK_PREFIX() { return getToken(IdfParser.BLOCK_PREFIX, 0); }
		public Site_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_site_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).enterSite_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).exitSite_line(this);
		}
	}

	public final Site_lineContext site_line() throws RecognitionException {
		Site_lineContext _localctx = new Site_lineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_site_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BLOCK_PREFIX) {
				{
				setState(62);
				match(BLOCK_PREFIX);
				}
			}

			setState(65);
			match(SITE);
			setState(66);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode COMMENT_PREFIX() { return getToken(IdfParser.COMMENT_PREFIX, 0); }
		public List<TerminalNode> STRING() { return getTokens(IdfParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(IdfParser.STRING, i);
		}
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).exitComment(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(COMMENT_PREFIX);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRING) {
				{
				{
				setState(69);
				match(STRING);
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Measure_lineContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(IdfParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(IdfParser.STRING, i);
		}
		public TerminalNode NEWLINE() { return getToken(IdfParser.NEWLINE, 0); }
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public Measure_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_measure_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).enterMeasure_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).exitMeasure_line(this);
		}
	}

	public final Measure_lineContext measure_line() throws RecognitionException {
		Measure_lineContext _localctx = new Measure_lineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_measure_line);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(STRING);
			setState(76);
			match(STRING);
			setState(77);
			match(STRING);
			setState(78);
			match(STRING);
			setState(79);
			match(STRING);
			setState(80);
			match(STRING);
			setState(84);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(81);
					match(STRING);
					}
					} 
				}
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(90);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(87);
					match(STRING);
					}
					} 
				}
				setState(92);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(93);
					match(STRING);
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(102);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(99);
					match(STRING);
					}
					} 
				}
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(108);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(105);
					match(STRING);
					}
					} 
				}
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(114);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(111);
					match(STRING);
					}
					} 
				}
				setState(116);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(117);
					match(STRING);
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRING) {
				{
				{
				setState(123);
				match(STRING);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT_PREFIX) {
				{
				setState(129);
				comment();
				}
			}

			setState(132);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Location_lineContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(IdfParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(IdfParser.STRING, i);
		}
		public TerminalNode NEWLINE() { return getToken(IdfParser.NEWLINE, 0); }
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public List<TerminalNode> STRING_ESC() { return getTokens(IdfParser.STRING_ESC); }
		public TerminalNode STRING_ESC(int i) {
			return getToken(IdfParser.STRING_ESC, i);
		}
		public Location_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_location_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).enterLocation_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IdfListener ) ((IdfListener)listener).exitLocation_line(this);
		}
	}

	public final Location_lineContext location_line() throws RecognitionException {
		Location_lineContext _localctx = new Location_lineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_location_line);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(STRING);
			setState(135);
			match(STRING);
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(136);
					match(STRING);
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			setState(145);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(142);
					match(STRING);
					}
					} 
				}
				setState(147);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			}
			setState(151);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(148);
					match(STRING);
					}
					} 
				}
				setState(153);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			}
			setState(157);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(154);
					_la = _input.LA(1);
					if ( !(_la==STRING_ESC || _la==STRING) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(159);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			}
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRING_ESC || _la==STRING) {
				{
				{
				setState(160);
				_la = _input.LA(1);
				if ( !(_la==STRING_ESC || _la==STRING) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT_PREFIX) {
				{
				setState(166);
				comment();
				}
			}

			setState(169);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}